Basic payment functionality.
More work needs to be done with the postback URL cancelling, etc.
but this is a working start.

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -5,3 +5,9 @@ banner:
 
 cas:
   url: "https://login.biola.edu/cas"
+
+touch_net:
+  upay_store_id: # Set this in settings.local.yml
+  context: # Set this in settings.local.yml
+  passed_amount_validation_key: # Set this in settings.local.yml
+  posting_key: # Set this in settings.local.yml
