--- a/config/settings.yml
+++ b/config/settings.yml
@@ -11,3 +11,4 @@ touch_net:
   context: # Set this in settings.local.yml
   passed_amount_validation_key: # Set this in settings.local.yml
   posting_key: # Set this in settings.local.yml
+  production: # when nil will use Rails.env
