Don't install ruby-oci8 on Travis CI.
Travis doesn't seem to have the Oracle client support needed to
install it.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,5 @@ rvm:
 services:
   - mongodb
 script: bundle exec rspec
+# skip ruby-oci8 since it can't be installed on Travis
+bundler_args: --without devolopment staging production
