Ugh. Typo in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ services:
   - mongodb
 script: bundle exec rspec
 # skip ruby-oci8 since it can't be installed on Travis
-bundler_args: --without devolopment staging production
+bundler_args: --without development staging production
